add router outlet selector

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,22 @@
-<app-user></app-user>
+<!DOCTYPE html>
+<html>
+    <head></head>
+    <body>
+        <div class="jumbotron">
+            <div class="row">
+                <div class="col-md-8">
+                    <h1>GittY</h1>
+                </div>
+                <div class="col-md-4 search-area">
+                    <input class="search form-control mr-sm-2" type="text" placeholder="Input Github Username">    
+                </div>
+            </div>
+            <div class="navigation">
+                <a class="nav-item nav-link active d-inline">Profile</a>
+                <a class="nav-item nav-link d-inline">Repos</a>
+            </div>
+        </div>
+
+        <router-outlet></router-outlet>
+    </body>
+</html>
