--- a/src/app/repos/repos.component.css
+++ b/src/app/repos/repos.component.css
@@ -1,3 +1,8 @@
+.icon {
+    font-size: 20px;
+    padding: 5px;
+    border-radius: 50%;
+}
 .repos-field {
     height: 53vh;
     overflow-y: scroll;
